--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,5 @@ test:
 production:
   <<: *default
   database: alpha_blog_production
-  username: alpha_blog
-  password: <%= ENV['ALPHA_BLOG_DATABASE_PASSWORD'] %>
+  username: postgres
+  password: postgres
